Show correct dataset and model descriptions when classes are wrapped. - Dataset constructor takes an optional description argument. - Subclasses of Dataset and Model can override description() for custom info. - In settings panel, row header shows only the first line of description; expand   for the full text.
PiperOrigin-RevId: 342670210

--- a/lit_nlp/client/modules/global_settings.css
+++ b/lit_nlp/client/modules/global_settings.css
@@ -68,9 +68,13 @@
 }
 
 a {
+  color: var(--app-dark-text-color);
+  text-decoration: none;
+}
+
+a.link-out {
   color: #888;
   padding: 0 5pt;
-  text-decoration: none;
 }
 
 mwc-icon {
@@ -247,6 +251,10 @@ a:hover {
 .description {
   padding: 0 12pt 0 12pt;
   color: #888;
+}
+
+.description-text {
+  white-space: pre-wrap; /* preserve newlines */
 }
 
 .status {
